fix(pressets): fix title overflowing the swiper

--- a/src/components/Pressets/pressets.less
+++ b/src/components/Pressets/pressets.less
@@ -116,9 +116,41 @@
 .title-swiper {
   position: absolute;
   z-index: 10;
-  top: -50px;
+  top: -60px;
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.presset-title-top {
+  border: none !important;
+  font-size: 22px !important;
+  color: #e0dcd0;
+  letter-spacing: -0.75px;
   width: 100%;
   text-align: center;
+  text-overflow: ellipsis;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.presset-title-small {
+  font-size: 20px !important;
+}
+
+.presset-title-very-small {
+  font-size: 17px !important;
+}
+
+.presset-title-temp {
+  color: #e74d4d;
+}
+
+.title-swiper .small-title {
+  font-size: 16px;
 }
 
 .title-swiper.transitioning::before,
@@ -442,22 +474,6 @@
 
 .animation-title-opacity-zero {
   animation: titleOpacityZero 280ms forwards;
-}
-
-.presset-title-top {
-  top: 100px !important;
-  border: none !important;
-  font-size: 22px !important;
-  text-transform: capitalize !important;
-  color: #e0dcd0;
-  letter-spacing: -0.75px;
-  display: contents;
-  width: 181px;
-  text-align: center;
-}
-
-.presset-title-temp {
-  color: #e74d4d;
 }
 
 .swiper-pagination {
